# CPPMinimalFFT

./: .gitignore  CMakeLists.txt  CPPMinimalFFT.hpp  LICENSE.txt  README.md  bluestein.cpp  buildinfo.h.in  direct.cpp  highway.cpp  indexer.cpp  main.cpp  pfa.cpp  plan.cpp  plan.hpp  stockham.cpp  weights.hpp
assembly/: CMakeLists.txt
docs/: pfa2.md  pfa3.md
generate/: CMakeLists.txt  genweights.cpp
src/: CPPMinimalFFT.hpp  bluestein.cpp  direct.cpp  indexer.cpp  pfa.cpp  pfa.hpp  plan.cpp  plan.hpp  sincos.cpp  small.cpp  spiral.cpp  stockham.cpp  weights.hpp  wheel.cpp
src/d2/: bluestein.cpp  direct.cpp  spiral.cpp  stockham.cpp
src/s4/: bluestein.cpp  direct.cpp  stockham.cpp
test/: CMakeLists.txt  common.hpp  hmean.cpp  hmean.hpp  test1.cpp  test17.cpp  test18.cpp
